panel funcionando, login ok, pagina alta prod en proceso

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -85,3 +85,16 @@
 }
 
 
+.img_inicio {
+  width: 100%;
+}
+
+.visible {
+  display: block;
+  visibility: visible;
+}
+
+.oculto {
+  display: none;
+  visibility: hidden;
+}
